--- a/app/frontend/src/components/watchlist-table/watchlist-table.styles.scss
+++ b/app/frontend/src/components/watchlist-table/watchlist-table.styles.scss
@@ -1,8 +1,7 @@
 .watchlist-table-container {
   display: flex;
   flex-shrink: inherit;
-  width: min-content;
-  overflow: initial;
+  width: 80%;
 }
 
 .watchlist-table {
@@ -10,6 +9,7 @@
   background-color: white;
   border-radius: 10px;
   font-family: "Arial";
+  width: 100%;
   margin: 25px 25px;
   border-collapse: collapse;
   border-style: hidden;
